--- a/BlogSite/.settings/org.eclipse.core.resources.prefs
+++ b/BlogSite/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/main/java/com/skf/dao/springdao/SqlDao.java=UTF-8
 encoding//src/main/java/com/skf/util/UtilFuns.java=UTF-8
+encoding//src/main/webapp/WEB-INF/pages/regist.jsp=UTF-8
 encoding/<project>=UTF-8
