--- a/BlogSite/src/main/webapp/WEB-INF/web.xml
+++ b/BlogSite/src/main/webapp/WEB-INF/web.xml
@@ -21,10 +21,21 @@
   		<param-value>classpath:springmvc-servlet.xml</param-value>
   	</init-param>
   </servlet>
+  <servlet>
+  	<description>
+  	</description>
+  	<display-name>VolidateServlet</display-name>
+  	<servlet-name>VolidateServlet</servlet-name>
+  	<servlet-class>com.skf.servlet.VolidateServlet</servlet-class>
+  </servlet>
   
   <servlet-mapping>
   	<servlet-name>springmvc</servlet-name>
   	<url-pattern>*.action</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>VolidateServlet</servlet-name>
+  	<url-pattern>/VolidateServlet</url-pattern>
   </servlet-mapping>
   
 	
@@ -39,7 +50,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>SpringEncoding</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>*.action</url-pattern>
 	</filter-mapping>
  <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
