--- a/BlogSite/src/main/resources/log4j.properties
+++ b/BlogSite/src/main/resources/log4j.properties
@@ -34,8 +34,11 @@ log4j.appender.logindb.sql=INSERT INTO LOGIN_LOG_P(LOGIN_LOG_ID,LOGIN_NAME,IP_AD
 log4j.appender.logindb.layout=org.apache.log4j.PatternLayout
 
 log4j.logger.org.apache=INFO
-log4j.logger.cn.itcast.jk=DEBUG
+log4j.logger.com.skf.jk=DEBUG
 
-
+log4j.logger.java.sql.Connection=DEBUG
+log4j.logger.java.sql.Statement=DEBUG
+log4j.logger.java.sql.PreparedStatement=DEBUG 
+log4j.logger.java.sql.ResultSet=DEBUG
 
 
